--- a/index.html
+++ b/index.html
@@ -9,129 +9,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <!-- ふわっとやさしい見た目のフォント -->
   <link href="https://fonts.googleapis.com/css2?family=Zen+Kaku+Gothic+New:wght@400;500;700&display=swap" rel="stylesheet">
-  <style>
-    :root{
-      /* チーズ系カラー */
-      --cheese-50:#FFFCED;
-      --cheese-100:#FFF6C9;
-      --cheese-200:#FEEB9A;
-      --cheese-300:#FBD859;
-      --cheese-400:#F5C63A; /* メイン */
-      --cheese-500:#E6B31E;
-      --cheese-700:#B5840F;
-      --cocoa-900:#3C2A12;
-      --ink:#2b2b2b;
-      --bg:#fffef8;
-      --card:#ffffff;
-      --muted:#6b6b6b;
-      --ring: rgba(245,198,58,.35);
-      --radius: 18px;
-      --shadow: 0 10px 30px rgba(60,42,18,.12);
-    }
-    *{box-sizing:border-box}
-    html,body{height:100%}
-    body{
-      margin:0;
-      font-family: "Zen Kaku Gothic New", system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans JP", "Hiragino Kaku Gothic ProN", Meiryo, sans-serif;
-      color:var(--ink);
-      background:
-        radial-gradient(20px 20px at 20% 15%, rgba(0,0,0,.06) 1px, transparent 1px),
-        radial-gradient(28px 28px at 70% 35%, rgba(0,0,0,.05) 1.2px, transparent 1.2px),
-        radial-gradient(16px 16px at 40% 75%, rgba(0,0,0,.04) 1px, transparent 1px),
-        linear-gradient(180deg, var(--cheese-100), var(--cheese-50));
-      background-size: 120px 120px, 180px 180px, 140px 140px, 100% 100%;
-    }
-
-    .container{max-width:1040px;margin:0 auto;padding:28px;}
-    header{
-      display:flex; gap:18px; align-items:center; justify-content:space-between;
-      padding:12px 16px; border-radius:calc(var(--radius) - 6px);
-      background: color-mix(in hsl, var(--cheese-50), #fff 40%);
-      box-shadow: 0 1px 0 rgba(0,0,0,.04) inset;
-    }
-    .brand{display:flex;gap:12px;align-items:center;}
-    .logo{
-      width:44px;height:44px;border-radius:12px;background:var(--cheese-400);
-      box-shadow: inset 0 -6px 12px rgba(181,132,15,.3), 0 4px 10px rgba(0,0,0,.06);
-      display:grid;place-items:center;
-    }
-    .logo svg{width:28px;height:28px}
-    .brand h1{font-size:1.05rem;margin:0;letter-spacing:.02em}
-    nav a{
-      text-decoration:none;color:var(--ink);font-weight:500;margin-left:16px;
-      padding:8px 12px;border-radius:10px;
-    }
-    nav a:hover{background:rgba(0,0,0,.06)}
-    .hero{
-      margin-top:32px;
-      display:grid; grid-template-columns: 1.1fr .9fr; gap:28px;
-      align-items: center;
-    }
-    .panel{
-      background:var(--card);
-      border-radius:var(--radius);
-      box-shadow: var(--shadow);
-      padding:28px;
-      border:1px solid rgba(0,0,0,.06);
-    }
-    .badge{
-      display:inline-block; padding:6px 10px; border-radius:999px;
-      background: var(--cheese-200); color: var(--cocoa-900);
-      font-weight:600; font-size:.85rem; letter-spacing:.02em;
-      box-shadow: inset 0 -1px 0 rgba(0,0,0,.06);
-    }
-    h2{font-size:1.9rem; margin:.6rem 0 1rem; line-height:1.3}
-    p{line-height:1.9; color:var(--ink); margin:0 0 1rem}
-    .accent{color:var(--cocoa-900)}
-    .actions{display:flex;gap:12px;margin-top:14px;flex-wrap:wrap}
-    .btn{
-      display:inline-flex; align-items:center; gap:10px;
-      padding:12px 16px; border-radius:12px; border:1px solid rgba(0,0,0,.08);
-      background:#fff; text-decoration:none; color:var(--ink); font-weight:600;
-      box-shadow: 0 3px 10px rgba(0,0,0,.05);
-      transition: transform .04s ease;
-    }
-    .btn.primary{
-      background: linear-gradient(180deg, var(--cheese-300), var(--cheese-400));
-      border-color: color-mix(in srgb, var(--cheese-500), #000 10%);
-      color:#3c2a12;
-    }
-    .btn:active{transform: translateY(1px)}
-    .cheese-card{
-      position:relative; aspect-ratio: 4/3; border-radius:var(--radius);
-      overflow:hidden; background: linear-gradient(160deg, var(--cheese-300), var(--cheese-500));
-      box-shadow: var(--shadow);
-      border:1px solid rgba(0,0,0,.06);
-    }
-    .cheese-illustration{
-      position:absolute; inset:0; display:grid; place-items:center;
-      filter: drop-shadow(0 10px 18px rgba(60,42,18,.25));
-    }
-    .cheese-illustration svg{width:min(90%,440px); height:auto}
-    .holes > circle{mix-blend-mode: multiply; opacity:.25}
-    section{margin-top:42px}
-    .grid{display:grid; gap:18px; grid-template-columns: repeat(3, 1fr)}
-    .card{
-      background:var(--card); border-radius:var(--radius); padding:18px;
-      border:1px solid rgba(0,0,0,.06); box-shadow: var(--shadow);
-      display:flex; flex-direction:column; gap:8px;
-    }
-    .tag{display:inline-block;padding:4px 8px;border-radius:999px;background:var(--cheese-100);color:#6b5314;font-size:.8rem;font-weight:700}
-    .muted{color:var(--muted)}
-    footer{margin:48px 0 12px; text-align:center; color:var(--muted); font-size:.9rem}
-
-    /* レスポンシブ */
-    @media (max-width: 960px){
-      .hero{grid-template-columns: 1fr}
-      .grid{grid-template-columns: 1fr 1fr}
-    }
-    @media (max-width: 640px){
-      .grid{grid-template-columns: 1fr}
-      h2{font-size:1.6rem}
-    }
-    /* フォーカスリング */
-    a, button{outline-color: var(--ring)}
-  </style>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="container">
@@ -162,10 +40,10 @@
       <section class="hero" aria-labelledby="hero-title">
         <div class="panel">
           <span class="badge">Sumireのポートフォリオサイトです</span>
-          <h2 id="hero-title">やわらかく、とろける<strong class="accent">“チーズ色”</strong>のデザインで、私の作品と人となりをまとめています。</h2>
+          <h2 id="hero-title">私の作品と人となりをまとめていきます！まだ何もないけど！
+          </h2>
           <p>
-            エンジニアリング／研修まわりのアウトプットや、学びのメモを載せていきます。  
-            まずは最小構成から。少しずつ熟成させていきます🧀
+            ポートフォリオを載せていく。予定。
           </p>
           <div class="actions">
             <a class="btn primary" href="#works">作品を見る</a>
@@ -202,25 +80,24 @@
 
       <section id="works" aria-labelledby="works-title">
         <h2 id="works-title">Works</h2>
-        <p class="muted">まずはダミーのカードを置いてあります。後でGitHubリポジトリや記事リンクに差し替えてね。</p>
         <div class="grid" role="list">
           <article class="card" role="listitem">
             <span class="tag">Java / Training</span>
-            <h3>Java手書きドリル</h3>
-            <p class="muted">学習者がつまずくポイントを“手で書いて覚える”に特化して再設計。</p>
-            <a class="btn" href="#" aria-label="Java手書きドリルの詳細へ">詳細をみる</a>
+            <h3>自慢</h3>
+            <p class="muted">チーズが好きすぎて常に家にチーズがある</p>
+            <a class="btn" href="#" aria-label="チーズ好きへの詳細へ">詳細をみる</a>
           </article>
           <article class="card" role="listitem">
             <span class="tag">Web</span>
             <h3>認証だけサンプル（Firebase）</h3>
-            <p class="muted">まずはログインだけ。小さく作って早く公開する方針。</p>
+            <p class="muted">まずはログインだけのアプリでも作ろうかな</p>
             <a class="btn" href="#" aria-label="認証サンプルの詳細へ">詳細をみる</a>
           </article>
           <article class="card" role="listitem">
             <span class="tag">Note</span>
-            <h3>要件定義×ビジュアル化メモ</h3>
-            <p class="muted">グラフィックで合意形成を支える実践メモ。</p>
-            <a class="btn" href="#" aria-label="ビジュアル化メモの詳細へ">詳細をみる</a>
+            <h3>イラスト自慢</h3>
+            <p class="muted">ゆるい絵を使って活躍できるかもしれない。</p>
+            <a class="btn" href="#" aria-label="イラスト自慢の詳細へ">詳細をみる</a>
           </article>
         </div>
       </section>
@@ -229,21 +106,18 @@
         <h2 id="about-title">About</h2>
         <div class="panel">
           <p>
-            研修・教育まわりの設計と、学習者の「わかる」をつくる情報デザインが得意です。  
-            たまに漫画やイラストで補助線を引くのが好き。
+            教育系のSEやってます。漫画やイラストも描いてます。
           </p>
-          <p class="muted">好きなもの：チーズ（さけるチーズ、カマンベール）、生ハム、コーン</p>
+          <p class="muted">好きなもの：チーズ</p>
         </div>
       </section>
 
       <section id="contact" aria-labelledby="contact-title">
         <h2 id="contact-title">Contact</h2>
         <div class="panel">
-          <p class="muted">SNSやメールのリンクをここに置いてね。</p>
           <div class="actions">
-            <a class="btn" href="#" aria-label="GitHubへ">GitHub</a>
-            <a class="btn" href="#" aria-label="Xへ">X</a>
-            <a class="btn" href="mailto:your.mail@example.com" aria-label="メールを送る">Email</a>
+            <a class="btn" href="https://github.com/Sumire2125/" aria-label="GitHubへ">GitHub</a>
+            <a class="btn" href="https://x.com/Sumirecheese" aria-label="Xへ">X</a>
           </div>
         </div>
       </section>
