イラストを載せた

--- a/index.html
+++ b/index.html
@@ -53,28 +53,7 @@
 
         <!-- 大きな“チーズ”のビジュアル（SVGなので画像いらず＆高解像度） -->
         <div class="cheese-card" aria-hidden="true">
-          <div class="cheese-illustration">
-            <svg viewBox="0 0 800 600">
-              <!-- 台座の板 -->
-              <rect x="60" y="430" width="680" height="40" rx="12" fill="#d8c3a5" opacity=".7"/>
-              <rect x="40" y="460" width="720" height="18" rx="9" fill="#c2a178" opacity=".9"/>
-              <!-- チーズ本体 -->
-              <g>
-                <path d="M140,360 L470,260 C520,245 660,245 720,260 L720,420 C720,450 700,470 670,480 L260,560 C220,570 180,545 170,505 L140,360 Z"
-                      fill="#f5c63a"/>
-                <path d="M720,260 L480,300 C430,308 280,350 240,370 L240,520 C240,540 260,555 285,548 L670,460 C700,453 720,432 720,402 Z"
-                      fill="#f0b928"/>
-                <!-- チーズ穴 -->
-                <g class="holes" fill="#9a730e">
-                  <circle cx="580" cy="420" r="26"/>
-                  <circle cx="660" cy="370" r="18"/>
-                  <circle cx="500" cy="360" r="16"/>
-                  <circle cx="420" cy="430" r="22"/>
-                  <circle cx="300" cy="470" r="18"/>
-                </g>
-              </g>
-            </svg>
-          </div>
+          <img src="images/ポートフォリオ用_背景透過.png" alt="私のイラスト" style="width:100%; height:auto;">
         </div>
       </section>
 
